# freetds

./: .gitignore  CMakeLists.txt  configure.ac
build-scripts/: README.md  build-linux.sh  build-windows.cmd  build-windows.ps1  freetds-sharedlib.patch  generate-patch.py  setup-and-build.sh
include/freetds/: export.h  replacements.h  server.h  sysdep_private.h  tds.h
include/freetds/replacements/: readpassphrase.h
include/freetds/utils/: string.h
src/: Makefile.am
src/replacements/: CMakeLists.txt  Makefile.am  readpassphrase.c
src/server/: CMakeLists.txt  login.c  query.c
src/sharedlib/: CMakeLists.txt  Makefile.am  freetds_sharedlib.c
src/tds/: CMakeLists.txt  tls.c
src/utils/: CMakeLists.txt
